修改swagger文档的细节；
