# docs/swagger.json
@@ -1,21 +1,16 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "灵剑服务器API文档",
-        "title": "灵剑服务器API",
-        "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
-        },
+        "description": "灵简服务端API文档",
+        "title": "灵简服务端API",
+        "contact": {},
         "license": {
             "name": "Apache 2.0",
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         },
         "version": "1.0"
     },
-    "host": "localhost:8081",
+    "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
         "/auth/captcha": {
